Native/Test/KL/missing-method.out
missing-method.kl:7:10: error: type Foo has no method 'baz(String,Integer,Boolean)'
