Native/Test/KL/missing-method.kl
struct Foo {
  String bar;
};

operator entry() {
  Foo foo;
  report foo.baz("Hello", 42, true);
}
